--- a/packages/proppy-frint-react/package.json
+++ b/packages/proppy-frint-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proppy-frint-react",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "FrintJS + React integration with ProppyJS",
   "main": "lib/index.js",
   "homepage": "https://github.com/fahad19/proppy/tree/master/packages/proppy-frint-react",
@@ -27,11 +27,10 @@
   "keywords": [
     "proppy"
   ],
-  "dependencies": {},
   "devDependencies": {
     "frint-config": "^5.4.3",
     "frint-react": "^5.4.3",
-    "proppy-react": "0.0.1"
+    "proppy-react": "^1.0.0"
   },
   "bugs": {
     "url": "https://github.com/fahad19/proppy/issues"
