--- a/packages/proppy-preact/package.json
+++ b/packages/proppy-preact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proppy-preact",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Preact integration with ProppyJS",
   "main": "lib/index.js",
   "homepage": "https://github.com/fahad19/proppy/tree/master/packages/proppy-preact",
@@ -27,10 +27,9 @@
   "keywords": [
     "proppy"
   ],
-  "dependencies": {},
   "devDependencies": {
     "preact": "^8.2.9",
-    "proppy": "0.0.1"
+    "proppy": "^1.0.0"
   },
   "bugs": {
     "url": "https://github.com/fahad19/proppy/issues"
