--- a/packages/proppy-react/package.json
+++ b/packages/proppy-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proppy-react",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "React integration with ProppyJS",
   "main": "lib/index.js",
   "homepage": "https://github.com/fahad19/proppy/tree/master/packages/proppy-react",
@@ -27,7 +27,6 @@
   "keywords": [
     "proppy"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@types/react": "^16.3.13",
     "enzyme": "^3.3.0",
@@ -35,7 +34,7 @@
     "enzyme-context-patch": "0.0.7",
     "frint-test-utils": "^5.4.3",
     "jsdom": "^11.10.0",
-    "proppy": "0.0.1",
+    "proppy": "^1.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-test-renderer": "^16.3.2"
