--- a/packages/proppy-redux/package.json
+++ b/packages/proppy-redux/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proppy-redux",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Redux integration with ProppyJS",
   "main": "lib/index.js",
   "homepage": "https://github.com/fahad19/proppy/tree/master/packages/proppy-redux",
@@ -27,9 +27,8 @@
   "keywords": [
     "proppy"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "proppy": "0.0.1",
+    "proppy": "^1.0.0",
     "redux": "^4.0.0"
   },
   "bugs": {
