--- a/packages/proppy-vue/package.json
+++ b/packages/proppy-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proppy-vue",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Vue.js integration with ProppyJS",
   "main": "lib/index.js",
   "homepage": "https://github.com/fahad19/proppy/tree/master/packages/proppy-vue",
@@ -27,11 +27,10 @@
   "keywords": [
     "proppy"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.15",
     "ajv": "^6.4.0",
-    "proppy": "0.0.1",
+    "proppy": "^1.0.0",
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16"
   },
