--- a/packages/proppy-preact/package.json
+++ b/packages/proppy-preact/package.json
@@ -28,7 +28,9 @@
     "proppy"
   ],
   "devDependencies": {
+    "frint-test-utils": "^5.7.2",
     "preact": "^8.2.9",
+    "preact-render-spy": "^1.3.0",
     "proppy": "^1.2.6"
   },
   "bugs": {
