--- a/packages/proppy-react-hooks/package.json
+++ b/packages/proppy-react-hooks/package.json
@@ -30,7 +30,8 @@
   "devDependencies": {
     "proppy": "^1.2.6",
     "proppy-react": "^1.2.6",
-    "react": "^16.7.0-alpha.0"
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.2"
   },
   "bugs": {
     "url": "https://github.com/fahad19/proppy/issues"
